# clinicManagementSystemAI

./: .gitignore  .replit  LOCAL_SETUP_GUIDE.md  README.md  manage.py  pyproject.toml  replit.md  set_admin_password.py  start_server.bat
accounts/: decorators.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ai/: admin.py  forms.py  models.py  services.py  urls.py  views.py
ai/migrations/: 0001_initial.py
attached_assets/: Pasted--Core-Flow-to-Implement-in-the-UI-The-system-must-suppo_1765102144957.txt  Pasted--You-are-an-expert-full-stack-engineer-and-UI-UX-design_1765100597590.txt  Pasted-Below-is-a-ready-to-copy-prompt-for-generating-a-modern_1765092683815.txt  Pasted-Gotcha-so-If-ID-Type-NRIC-auto-format-auto-DOB-from-IC-_1765070054301.txt  Pasted-Here-s-a-ready-to-use-prompt-you-can-copy-paste-into-an_1765031389205.txt  Pasted-Here-s-a-ready-to-use-prompt-you-can-copy-paste-into-yo_1765249822837.txt  Pasted-Nice-AI-clinic-system-is-a-fun-combo-Here-s-an-updated-_1765070794605.txt  Pasted-You-can-extend-your-existing-prompt-like-this-to-add-LH_1765068281831.txt
clinic_management/: settings.py  urls.py
einvoice/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
einvoice/migrations/: 0001_initial.py
finance/: forms.py  models.py  urls.py  views.py
management_app/: forms.py  models.py  urls.py  views.py
patients/: forms.py  models.py  urls.py  views.py
setup_app/: forms.py  models.py  urls.py  views.py
templates/: base.html
xray/: admin.py  forms.py  models.py  urls.py  views.py
(+94 files in other folders)
